zig zag working and gui fixes to dark mode

--- a/style.css
+++ b/style.css
@@ -10,7 +10,8 @@ body {
   width: 100vw;
   height: 100vh;
   overflow: hidden;
-  background: radial-gradient(#efefef, #cccccc);
+  /*background: radial-gradient(#000, #cccccc);*/
+  background-color:rgb(11, 11, 11);
 }
 
 label {
@@ -27,7 +28,7 @@ label {
   position: fixed;
   width: 100%;
   height: 100%;
-  background:repeating-linear-gradient(#efe, hsl(60, 30%, 10%));
+  /*background:repeating-linear-gradient(#efe, hsl(60, 30%, 10%));*/
   text-align: center;
   z-index: 1;
 }
@@ -84,6 +85,11 @@ label {
     background-color: #fff;
     box-shadow: 0 0 0 #fff;
   }
+}
+
+#mods {
+  background-color: transparent;
+  color: rgba(255, 242, 63, 0.707);
 }
 
 @keyframes error-glow {
